# hermes

./: .editorconfig  .gitignore  Cargo.toml
desktop/: .taurignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: app.rs  main.rs
desktop/src-comm/: Cargo.toml
desktop/src-comm/src/: setup.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  setup.rs
desktop/style/: output.css  tailwind.css
lib/: Cargo.toml
lib/examples/: downloader.rs
lib/src/: lib.rs
lib/src/config/: mod.rs
lib/src/downloader/: mod.rs  pool.rs  worker.rs
lib/src/repo/: delta.rs  dlc.rs  file.rs  layer.rs  mod.rs  pack.rs  password.rs  server.rs  unit.rs
