[workspace]
members = [
    "bin/cli",

    "desktop",
    "desktop/src-tauri",
    "desktop/src-comm",

    "lib",
]
resolver = "2"

[workspace.dependencies]
hemtt-pbo = { git = "https://github.com/brettmayson/hemtt" }
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
