[package]
name = "hermes-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hermes-desktop-comm = { path = "./src-comm" }

console_error_panic_hook = "0.1.7"
js-sys = "0.3.76"
leptos = { version = "0.7.2", features = ["csr"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
