[package]
name = "harmony"
description = "Harmony - Model"
version = "0.1.0"
edition = "2021"

[dependencies]
hemtt-pbo = { workspace = true }
indexmap = { version = "1.9.3", features = ["serde"] }
indicatif = { version = "0.17.3" }
rayon = { workspace = true }
reqwest = { version = "0.11.17" }
ring = "0.16.20"
rmp-serde = "1.1.1"
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { version = "0.7.3" }

[dev-dependencies]
human_bytes = "0.4.2"
