[package]
name = "harmony"
description = "Harmony - Model"
version = "0.1.0"
edition = "2021"

[dependencies]
hemtt-pbo = { workspace = true }
indexmap = { version = "2.0.2", features = ["serde"] }
indicatif = { version = "0.17.7" }
rayon = { workspace = true }
reqwest = { version = "0.11.22" }
ring = "0.17.5"
rmp-serde = "1.1.2"
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { version = "0.8.6" }

[dev-dependencies]
human_bytes = "0.4.3"
