[package]
name = "hermes-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hermes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
hermes-desktop-comm = { path = "../src-comm" }

futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.0.0-beta.2"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"

# dark-light = "1.1.1"
dark-light = { git = "https://github.com/frewsxcv/rust-dark-light" }
